test/langtools/tools/javac/patterns/NullsInPatterns.out
NullsInPatterns.java:12:18: compiler.err.instanceof.pattern.no.subtype: java.util.List, compiler.misc.type.null
NullsInPatterns.java:23:18: compiler.err.instanceof.pattern.no.subtype: java.util.List<?>, compiler.misc.type.null
2 errors
